TM-3343 Fixes Event Dashboard formatting problems on tablets and smaller screens
git-svn-id: https://opsvcs.tdsops.com/repos/tdstm/trunk@6832 fecba46a-3362-0410-80e5-8c76cdb905a0

--- a/web-app/css/dashboard.css
+++ b/web-app/css/dashboard.css
@@ -239,10 +239,11 @@ body{
 	}
 
 .teamcol{
-	max-width:160px;
+	width:110px;
+	padding: 2px;
 }
 .teamcountcolumn{
-	max-width:50px;
+	width:30px;
 	text-align:right;
 }
 .teambarcolumn{
@@ -793,7 +794,7 @@ input, select, textarea {
 	margin: 5px;
 }
 .statusTaskEffort {
-	margin-left: 30px; 
+	margin-left: 5px; 
 }
 .statusTaskEffort.toprightcontent {
 	width: 380px;
@@ -804,8 +805,7 @@ input, select, textarea {
 	vertical-align: middle !important;
 }
 .teamBreakdown.toprightcontent {
-	width: 50%; 
-	max-width: 600px;
+	width: 500px;
 }
 .teamBreakdown {
 	margin-top:5px;
